<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context="com.brianrobbins.customtimer.MainActivity">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/linearLayout"
        android:contentDescription="@string/orange"
        app:srcCompat="@drawable/orangecircle" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/hrs"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/mins"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/secs"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero_string"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView1">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hrs"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mins"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/secs"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout4"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextHrs"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/zero_textfield"
            android:inputType="number"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextMins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/zero_textfield"
            android:inputType="number"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextSecs"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/zero_textfield"
            android:inputType="number"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout5"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/StartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:onClick="Click_Start"
            android:text="@string/start"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50" />

        <Button
            android:id="@+id/StopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:onClick="Click_Stop"
            android:text="@string/stop"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout7"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:onClick="Click_Pause"
            android:text="@string/pause"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.52" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:onClick="Click_Clear"
            android:text="@string/clear"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
